<resources>
    <string name="app_name">pruebas2</string>
    <string name="msgToast">Tostadita rica</string>
    <string name="cancel">Cancelar</string>
    <string name="acep">Aceptar</string>
    <string name="text">Mi carro me lo robaron.</string>
    <string name="pista">Ponga aqui lo que le salga de los collones</string>
    <string name="encendido">Encendido</string>
    <string name="apagado">Apagado</string>
    <string name="muller">Muller</string>
    <string name="home">Home</string>
    <string name="Comunista">Comunista</string>
    <string name="nazi">Nazi</string>
</resources>
